--- a/学生创作2020级.html
+++ b/学生创作2020级.html
@@ -363,7 +363,7 @@ pre
   </tr>
   <tr valign="middle">
     <td valign="top" bgcolor="#FFFFFF" style="height: 20px" class="style74">
-	  <p align="left" class="STYLE97"><span class="STYLE98">	    0833郑一民：傅聪母亲对儿子的爱 </span><br>
+	  <p align="left" class="STYLE97"><span class="STYLE98">	    0833：傅聪母亲对儿子的爱 </span><br>
 	    <br>
 	    <span class="STYLE102">母爱，可以说是世界上最体贴，最无微不至，最伟大的感情了。婴儿降生，第一反应除了哭，便是寻找母亲的怀抱；青年时受挫，大多数都是找母亲诉苦；成年时面临抉择，很多时候也要充分考虑母亲的观点和意见。可以说，母亲是人们在成熟之前离不开的。而傅聪母亲的形象也很容易让读者联想到自己的母亲。<br> 
 	    <br>
@@ -372,7 +372,7 @@ pre
 	    “你的裤子尺寸比你走时做得稍微小了些，你一定赞成的。”“昨天爸爸付去了三十八万三千七百元，是上海方面的运费，到了北京后，不知你付去多少？象牙图章一枚，你的迁出证都有旅行社交给你，不知收到了吗？琴运到后不知有否损坏？拆卸时恐怕很费事？是否放在你卧室内？室内有炉子否？俄文已开始，觉得困难否”“维他命B,C不要忘了，牛油面包可以多吃些，第一身体，尤其是你身心并用，千万千万。”第一句母亲知道儿子忙工作,演出，劳碌奔波一定会瘦。可见，母亲对儿子的细心和了解。第二句连用七个问句，足见情感之强烈，体现了作为母亲对儿子傅聪事无巨细的关怀。维生素B,C可以维持正常的生理活动，可以恢复体力，释放压力，对于贫血能够起到很好的预防作用。母亲的叮咛，是母亲对儿子放不下的爱。这个文段充分表现了母爱是细腻的，是无微不至的。 </span></p>
 	  <p align="left" class="STYLE102">读完这本书，真是感慨万千。傅聪是幸运的，虽然他的父亲对他有时极端严厉，但是他却能为傅聪提供许多真正有用的帮助。更重要的是，他的母亲既没有过分宠溺他，也没有太过严厉。而是扮演了一种家庭调和者和对傅聪的关心者的角色。这样的一位母亲，对于傅聪来说，是受益无穷的。 </p>
 	  <p align="center">&nbsp;</p>
-	  <p align="left"><span class="STYLE103">0932丁思畅：傅雷给儿子的引导 </span><br>
+	  <p align="left"><span class="STYLE103">0932：傅雷给儿子的引导 </span><br>
 	    <span class="STYLE102"><br>
 	    读过《傅雷家书》，感触颇多，久久不能忘怀。“烽火连三月，家书抵万金。”傅雷就靠着薄薄一叠家信，寄与儿子他那一腔爱子之情，也寄与儿子最深刻的教诲。 <br>
 	    <br>
@@ -385,7 +385,7 @@ pre
 	    傅雷还在书信中写下了许多发人深省的人生道理。他说：“人一辈子都在高潮，低潮中沉浮，唯有庸碌的人，生活才如死水一般；或者要有极高的修养，方能廓然无累，真正的解脱。”傅雷教导傅聪做一个坚强的人，失败的时候不要过分颓废，成功的时候也不能骄傲自满。有了这些教导，傅聪成功的渡过了紧张低迷的时期，也没有因成功后受到的吹捧迷失自我。傅雷将自己所有的人生阅历凝练成这一封封书信，为傅聪指点迷津，尽了一个父亲的爱和职责。 </span></p>
 	  <p align="left"><span class="STYLE102">      傅雷信中所写的种种道理，不仅是给儿子的教诲，更应该成为更多青少年的引导。透过一封封的家信，我们感受着父子情深，也像傅聪一样细听教诲</span><span class="STYLE102">。</span></p>
 	  <p align="left" class="STYLE102"><br>
-	    <span class="STYLE98">0902陈朝鹏：傅雷对儿子的点拨<br>
+	    <span class="STYLE98">0902：傅雷对儿子的点拨<br>
 	    </span><br>
 	    俗话说得好，当局者迷，旁观者清。傅雷先生对儿子的教导，是成功的典范。人的一生不可能一帆风顺，成长中大大小小的挫折，方方面面的困扰，都会使我们陷入不尽的烦恼之中。这时候长者的智慧，往往能帮我们拨开眼前的迷雾，指明前进的方向。<br> 
 	    <br>
@@ -397,7 +397,7 @@ pre
       <br>
       多么深刻的一句话，它像暗谷里的指路灯，帮助我通向光明！ </p>
 	  <p align="left" class="STYLE102">&nbsp;</p>
-	  <p align="left" class="STYLE102"><span class="STYLE105">0834曹熙媛：傅雷与儿子的艺术交流</span><br>
+	  <p align="left" class="STYLE102"><span class="STYLE105">0834：傅雷与儿子的艺术交流</span><br>
 	    <br> 
 	    傅雷作为一名享誉世界的翻译家，文学与艺术知识十分渊博；而在长子傅聪出国留学后，他给儿子的书信内容更加体现出其艺术修养。傅雷在家信中除了关心儿子的日常生活，也经常与他进行深刻的文艺方面的讨论、交流。这对傅聪本人和广大读者，都产生了不同程度的影响。<br> 
 	    <br>
@@ -412,7 +412,7 @@ pre
 	    当然，我们从中也可以看出傅雷望子成龙的心愿：他希望儿子能成为一个德艺兼备、人格卓越的真正的艺术家！ </p>
 	  <p align="left" class="STYLE102">傅聪也用他往后的人生证明，他完成了父亲的心愿。 </p>
 	  <p align="left" class="STYLE102"><br>
-	    <span class="STYLE105">0915刘峻均：父母永远是温暖的港湾</span><br> 
+	    <span class="STYLE105">0915：父母永远是温暖的港湾</span><br> 
         <br>
 	    《傅雷家书》这本书可以说是非常贴近生活，反映着生活之中真实的一面，也反映出父母对儿子来说永远是最温暖的港湾，他们会在孩子迷茫时开解他们，在孩子低落时鼓励他们，在外面受到挫折伤痛回到父母面前便都会被化解。在外面是一个独当一面的大人，但是在父母面前还是一个没长大的孩子，父母将他们最伟大的爱来温暖他们。<br> 
 	    <br>
@@ -421,7 +421,7 @@ pre
 	    书中有这样一句话令我刻骨铭心：“人一辈子都在高潮——低潮中浮沉，  唯有庸碌的人生活才如一摊死水；或者要有极高的修养，方能廓然无累，真正解脱。”多么深刻的一句话啊！人的一生不可能一帆风顺，要以一种豁达的心态坦然地面对。当我们面对成功时，要谦虚待人；面对失败时要积极进取，相信自己；人生本就是一曲跌宕起伏的乐曲，只有这些高潮和低潮，我们才会有多姿多彩的生活。我们只有坦然面对它们，选择合适的方法应对，这样才能真正感受生活的乐趣和真谛，才能真正幸福。 <br>  
 	    <br>  
 	    <br>
-	    <span class="STYLE105">0828杨哲宇：傅雷对儿子的教导</span><br>
+	    <span class="STYLE105">0828：傅雷对儿子的教导</span><br>
 	    <br>
 	    吕公说：“人生内无贤父兄，外无严师友，而能有成者少矣。”傅雷就是傅聪的那位贤父。<br> 
 	    <br>
@@ -434,7 +434,7 @@ pre
       人的一生不可能一帆风顺，成长中大大小小的挫折，方方面面的困扰都会使我们陷入不尽的烦恼之中。这时候，长者的教导往往能帮助我们拨开眼前的迷雾，指明前进的方向。而傅聪有这样一位时时能保持客观而理智的长者是他的幸福和幸运。<br>
       <br>
       <br>
-      <span class="STYLE105">0951郑蓓乐：父爱深沉——傅雷的爱子情深</span><br> 
+      <span class="STYLE105">0951：父爱深沉——傅雷的爱子情深</span><br> 
 	    <br>
 	    人们常说：“父爱如山，母爱如水。”父亲的爱是理性而沉默的，常常在不言之中默默传递出那份爱意。傅雷是一位严厉的父亲，但在这一封封家书中，却传递着对儿子的思念和关心。<br> 
 	    <br>
@@ -448,7 +448,7 @@ pre
 	    <br>
 	    父爱平凡，但伟大。 </p>
 	  <p align="left" class="STYLE102"><br>
-        <span class="STYLE105">0835陈玥仪：傅雷对傅聪的人生引导</span></p>
+        <span class="STYLE105">0835：傅雷对傅聪的人生引导</span></p>
 	  <p align="left" class="STYLE102"> “洛阳城里见秋风,欲作家书意万重。”家书，顾名思义，是家人之间往来的书信。提到家书，总会想到一对父子之间的通信，那便是《傅雷家书》。这家书中不仅仅蕴含着父亲对自己儿子的浓浓父爱，也满是父亲对儿子的谆谆教诲。</p>
 	  <p align="left" class="STYLE102">从《傅雷家书》中，我们不难看出，傅雷与傅聪讨论的，多是做人之本。他教导傅聪，要做人第一，其次是做艺术家，再次是做音乐家，最后才是钢琴家。</p>
 	  <p align="left" class="STYLE102">傅雷在给儿子的信中说到：“一个又一个的筋斗栽过去，只要爬得起来，一定会逐渐攀上高峰，超脱在小我之上。”他告诉傅聪，只有经历过挫折和苦难，才能磨砺坚强的性格，才能超越个人的得失，取得事业的成功。</p>
@@ -456,7 +456,7 @@ pre
 	  <p align="left" class="STYLE102">傅雷墓碑上有这样一句话：“赤子孤独了，会创造一个世界。”这句话既映射了傅雷的一生--满身傲骨，宁折不屈，如同谪仙，遗世而独立，同时又用来教导傅聪，“永远保持赤子之心，到老也不会落伍，永远能够与普天下的赤子之心相接相契相抱！”他在傅聪演出获得成功的时候告诉儿子，成功之时更要坚强，保持赤子之心，成为真正的艺术家。</p>
 	  <p align="left" class="STYLE102">在傅雷的书信的熏陶下，傅聪时刻牢记父亲对他的人生引导，努力向上，坚定不移，成为了一代音乐大师，家喻户晓。</p>
 	  <p align="left" class="STYLE102">&nbsp;</p>
-	  <p align="left" class="STYLE102"><span class="STYLE105">0916刘泽宁：咽苦吐甘，寸草春晖</span><br>
+	  <p align="left" class="STYLE102"><span class="STYLE105">0916：咽苦吐甘，寸草春晖</span><br>
 	    <br>
 “少年不识双亲意，养儿方知父母恩”这句话在《傅雷家书》中被体现得淋漓尽致，在书中，傅雷夫妇对孩子傅聪的教导与关心，思念与鼓励，警醒与慰藉，使书中非高谈妙谛的语言却超过一切龙吟凤哕，丰富而热切的感情溢于言表，使我不禁情感如泉涌。<br> 
 <br>
@@ -466,7 +466,7 @@ pre
 <br>
 亲爱的孩子，请深深地、真切地、热爱地拥抱你的母亲，如傅雷所说的：“母亲的眼泪永远是圣洁的、慈爱的！”我也说，母亲的眼眸因你而澄澈，母亲的泪水因你而纯洁，母亲的灵魂因你而高尚，母亲的一切为你而生！ </p>
 	  <p align="left" class="STYLE102">&nbsp;</p>
-	  <p align="left" class="STYLE102"><span class="STYLE105">0810李嘉骏：傅雷对儿子的关心</span><br> 
+	  <p align="left" class="STYLE102"><span class="STYLE105">0810：傅雷对儿子的关心</span><br> 
 	    <br>
 	    人们常说“父爱如山”是啊，傅雷正是这样一位关爱孩子，体贴的父亲!他用如同山一般厚重的爱无微不至的关心着傅聪。<br> 
 	    <br>
@@ -479,7 +479,7 @@ pre
 	    <br>
       综上所述，傅雷是一位十分关心孩子的人，也正是在傅雷的关心下，才有了今日著名的钢琴大师傅聪。 </p>
 	  <p align="left" class="STYLE102">&nbsp;</p>
-	  <p align="left" class="STYLE102"><span class="STYLE105">0924武靖航：傅雷的爱国情怀</span><br>
+	  <p align="left" class="STYLE102"><span class="STYLE105">0924：傅雷的爱国情怀</span><br>
 	    <br>
 	    《傅雷家书》作为著名翻译家傅雷与儿子的书信集，其中蕴含了傅雷对儿子无数的爱和教诲，而其中更是少不了关于爱国的篇章。<br>
 	    <br>
@@ -491,7 +491,7 @@ pre
 	    <br>
       傅雷还经常与傅聪讨论中华传统艺术，从绘画到建筑都有所谈论，时刻提醒着傅聪自己与祖国千丝万缕的联系。<br>
 	  </p>
-	  <p align="left" class="STYLE102"><span class="STYLE105">0814刘圳宸：傅雷对儿子的人生指导 </span><br>
+	  <p align="left" class="STYLE102"><span class="STYLE105">0814：傅雷对儿子的人生指导 </span><br>
 	    <br>
 	    《傅雷家书》，是我国翻译家傅雷先生及夫人写给他们孩子傅聪的一些家信。从中能够看到一位父亲对儿子的深切的爱。<br>
 	    <br>
@@ -502,7 +502,7 @@ pre
       从《傅雷家书》中，我们可以领悟不一般的人世之理，发现不一样的亲情世界。<br>
       <br>
 	  </p>
-	  <p align="left" class="STYLE102"><span class="STYLE105">0904陈予乐：傅雷对儿子事业的关心 </span><br>
+	  <p align="left" class="STYLE102"><span class="STYLE105">0904：傅雷对儿子事业的关心 </span><br>
 	    <br>
 	    傅雷写给儿子的信中大多是关心儿子的生活，各种各样的问题与生活的提醒都一一落在了纸上。表现出了一个高高的父亲形象。但是在一句唠叨的话语背后，都有一个关心孩子，为孩子做决定的父亲的影子。在其中傅雷最关心的就是儿子的事业——钢琴。<br> 
 	    <br>
@@ -512,7 +512,7 @@ pre
 	    <br>
       从傅雷对儿子事业的关心中可以看出一个害怕自己孩子在外面出事，但又希望儿子可以独立自主生活的矛盾心理。其实天下的父母都是这样的，既希望孩子可以永远在自己的保护之下，又觉得孩子是应该自力更生的时候了。天下的父母，哪个不是关心自己孩子的呢？ </p>
 	  <p align="left" class="STYLE102">&nbsp;</p>
-	  <p align="left" class="STYLE102"><span class="STYLE105">0825吴卓桁：傅雷的爱子情深</span><br> 
+	  <p align="left" class="STYLE102"><span class="STYLE105">0825：傅雷的爱子情深</span><br> 
 	    <br>
 	    父爱是一把大伞，总在有雨的天里撑着；父爱是一座大山，挺拔而伟岸；父爱是一片汪洋的大海，浓郁而深远。傅雷虽是一位严厉的父亲，但在这一封封家书中,却传递着对儿子的思念和担忧。<br> 
 	    <br>
@@ -522,7 +522,7 @@ pre
 	    <br>
       傅雷信中所写的道理，不仅是给儿子的教诲，也是更多青少年的引导。透过一封封的家信，我们感受着父子情深。所以我们要珍惜与父亲相处的时间，理解他对我们的爱。 </p>
 	  <p align="left" class="STYLE102">&nbsp;</p>
-	  <p align="left" class="STYLE102"><span class="STYLE105">0941王楚铭：写给所有人的家书 </span><br>
+	  <p align="left" class="STYLE102"><span class="STYLE105">0941：写给所有人的家书 </span><br>
 	    <br>
 	    父母使儿女降生，给儿女一份深邃的感情，再不留下任何地离开。读《傅雷家书》，却能感到傅雷对儿子的感情不朽。它镇静躁动的思绪，安定漂泊的心灵。
 	      <br>
@@ -537,7 +537,7 @@ pre
 	    。 <br>
       佩索阿说：“把你的手放在我的手里，保持安静，被生活围绕。”我想，这是能够形容傅雷对儿子的感情的。《傅雷家书》不仅写给傅聪傅敏，也写给当时的家长和孩子，也写给如今正在盎然的我们，写给所有时代的新青年。</p>
 	  <p align="left" class="STYLE102">&nbsp;</p>
-	  <p align="left" class="STYLE98">0846王绚儿：傅雷对儿子艺术方面的教导 </p>
+	  <p align="left" class="STYLE98">0846：傅雷对儿子艺术方面的教导 </p>
 	  <p align="left" class="STYLE102">《傅雷家书》字里行间都洋溢着一位父亲对祖国、对儿子深沉的爱。在傅聪的艺术学习路上，傅雷起到了至关重要的作用。在傅雷先生给儿子的家信中，值得我们研究的不但是爱子情深的言语，更是傅雷先生对儿子艺术方面的点拨。<br> 
 	    <br>
 	    在1954年到1955年期间，信中提及到了很多关于古典音乐的内容。比如莫扎特、舒曼、肖邦、李斯特.…在写信时，傅雷总以讨论的形式与傅聪交流，这也在无形中拉近了与儿子的距离。“艺术最重要的是对作品的领会和吸收，而不是机械的照搬练习。一个艺术家，先要做好人，再谈艺术。”这是傅雷对儿子说的话，在教导傅聪艺术的同时，也教会了他为人处事的方法。在傅聪比赛后，傅雷也能精准地找出他的问题——在琴上身体懂得厉害，表情十足，但唯有肉体静止，精神的活动才最圆满。这是千古不变的定律。<br> 
@@ -547,7 +547,7 @@ pre
 	    同样作为一名钢琴学习者，书中的许多内容对我也大有帮助，平时一些理解不了的技巧在傅雷先生生动的语言中得到了解惑。艺术最难的就是“完美”，如果每一首曲子都追求完美，那是绝对不可能的，因为完美是永远都追求不到的。人的理想、幻想永无止境！ <br>
 	    <br>
 	  </p>
-	  <p align="left" class="STYLE102"><span class="STYLE105">0940唐欣然：如此父亲，如此的爱——傅雷的爱子情深</span><br> 
+	  <p align="left" class="STYLE102"><span class="STYLE105">0940：如此父亲，如此的爱——傅雷的爱子情深</span><br> 
 	    <br>
 	    初读《傅雷家书》，感触良多，渐渐被傅雷的舐犊之情而感动，拳拳之心，可见一斑。那些热烈而深沉的爱，凝聚着傅父与傅母对孩子们的付出和期待。<br> 
 	    <br>
@@ -559,7 +559,7 @@ pre
 	    <br>
       傅雷望子成龙心切，内心深处的爱便使他将其毕生积累的对人生的感悟，毫无保留地传给了儿子。如此平凡而伟大的父亲，如此热烈而深沉的爱！ </p>
 	  <p align="left" class="STYLE102">&nbsp;</p>
-	  <p align="left" class="STYLE98">0843李梓昕：
+	  <p align="left" class="STYLE98">0843：
 	    傅雷与儿子分享价值观</p>
 	  <p align="left" class="STYLE102"> “当局者迷，旁观者清”，更何况，傅雷比自己儿子傅聪多生活了很多年，悟出的道理自然比傅聪多。在儿子离开身边的这些日子里，傅雷在书信里与儿子分享自己的人生价值观，并告诉他为人处事之道。</p>
 	  <p align="left" class="STYLE102"> 在1955年3月21日上午的信里，傅雷说道“我时时刻刻要提醒你，想着过去的艰难，让你以后遇到困难的时候更有勇气去克服，不至于失掉信心！人生本是没穷尽没终点的马拉松赛跑，你的路程还长得很呢：不过是个光辉的开场。”这里鼓励傅聪要勇敢面对人生的挫折，要有越挫越勇的精神，这样才能获得更大的成功。“我提这些话，不是要为我过去的做法辩护，而是要趁你成功的时候特别让你提高警惕，绝对不让自满和骄傲的情绪抬头。我知道这也用不着多嘱咐，今日之下，你已经过了这一道骄傲自满的关，但我始终是中国儒家的门徒，遇到极盛的事，必定要有‘如临深渊，如履薄冰'的格外郑重、畏惧、戒备的感觉。”</p>
@@ -567,7 +567,7 @@ pre
 	  <p align="left" class="STYLE102"> “此外，也有一个道义的责任，使你要尽量把国外的思潮向我们报道。一个人对人民的服务不一定要站在大会上演讲或是做什么惊天动地的大事业，随时随地，点点滴滴的把你自己知道的，想到的告诉人家，无形中就是替国家播种、施肥、垦植！孩子，你千万要记住这些话，多多提笔。”这段话是来自1955年3月27日夜的家书。傅聪给远在他乡的儿子灌输爱国理念，不管身处何处，都要有一颗爱国之心。</p>
 	  <p align="left" class="STYLE102"> 通过阅读《傅雷家书》，我感受到了傅雷对儿子的关心，并懂得了他所分享的价值观教育。</p>
 	  <p align="left" class="STYLE102">&nbsp;</p>
-	  <p align="left" class="STYLE102"><span class="STYLE105">0946姚佩宸：傅雷的教子之道</span><strong><br>
+	  <p align="left" class="STYLE102"><span class="STYLE105">0946：傅雷的教子之道</span><strong><br>
       </strong><br>
 	    《傅雷家书》是我国著名翻译家、文艺点评家傅雷写给儿子傅聪的家书，是一本“充满着父爱的苦心孤诣、呕心沥血的教子篇，是最好的艺术学徒的修养读物”。<br>
 	    <br>
@@ -580,7 +580,7 @@ pre
 	    傅雷的教子之道，是以身作则的示范，是及时的安慰与勉励，是平等的交谈，是无情的自我解剖。正是在这样的教育下，傅聪才成为了一个德艺兼备，人格卓越的真正的艺术家。 <br>
 	    <br>
 	    <br>
-	    <span class="STYLE105">0852杨元曦：傅雷对儿子的期望 </span><br>
+	    <span class="STYLE105">0852：傅雷对儿子的期望 </span><br>
         <br>
 	    读这一封封家书，更多的是把自己作为一个有傅雷这样的父亲的孩子，而不是一个旁观者。但尽己所能还是不能完全体会信中传达的深意，也是在意料之中。<br> 
 	    <br>
@@ -591,7 +591,7 @@ pre
       “无论译哪一本书，总觉得不能从头至尾都好；可见任何艺术最难的是‘完整’！……因为人的理想、幻想，永无止境，所以perfection像水中月、镜中花。但能在某个阶段求得总体的‘完整’或是比较‘完整’，已经很不差了。”我沉思，我对着这句话自省我的目标；“眼看自己一天天的长大成熟，进步，了解的东西一天天的加多，精神领域一天天的加阔，胸襟一天天的宽大，感情一天天的丰满深刻：这不是人生最美满的幸福是什么！这不是最隽永最迷人的诗歌是什么！孩子，你好福气！”当读到这句话，我的内心澎湃着，同时那种不可思议的振奋就袭上心头！同时的，我又不由得生了羡慕，我多希望我也能有如此的一位父亲。 </p>
 	  <p align="left" class="STYLE102">但我现在沉下心来，想到我的父母，我的家庭，我认为我的羡慕没有必要。固然我的父母与傅雷和他的妻子不一样，但在内心里，又有哪位做父母的不是像他们一样永远热忱地期待着、盼望着孩子的未来呢？意识到，我原来是和傅聪一样的，一样幸运的孩子。</p>
 	  <p align="left" class="STYLE102">&nbsp;</p>
-	  <p align="left" class="STYLE98">      0806高宇轩：父母为儿子寄东西的细致</p>
+	  <p align="left" class="STYLE98">      0806：父母为儿子寄东西的细致</p>
 	  <p align="left" class="STYLE102">1954年傅聪一人离开祖国，但由于一人独行，所以能带走的乐器或生活必须品少之又少，于是傅雷必须为傅聪邮寄许多东西。<br> 
 	    <br>
 	    那么这时傅雷总是会在信的后面写上一些注意，例如：在1954年2月19号的信中最后一段写道：“注意钢丝上有小条子，标明号数，切勿丢掉，否则以后不易分清。钢丝弹性很足，有弹伤眼睛，手，身体的危险。你自己千万不可随便拉开，一定要动手做的人收场，而且每次换的时候，号数布条就要缚上去，否则要弄糊涂的，望你牢记在心上，千万千万！”从第一句话“钢丝上有小条子，标明号数，切勿丢掉，否则以后不易分清。”可以看出傅雷的聪慧，聪明，以及希望由自己承担一些比较难的工作，将最简单的事情留给儿子，让儿子在异地他乡可以升华的更舒适些。从第二第三句话也能看出傅雷对儿子的关爱，不希望自己的儿子受伤。<br> 
@@ -600,7 +600,7 @@ pre
 	    <br>
 	    通过以上两条，傅雷夫妇为儿子寄东西时对儿子的细心，细致以及足够的耐心和关爱。 </p>
 	  <p align="left" class="STYLE102">&nbsp;</p>
-	  <p align="left" class="STYLE102"><span class="STYLE105">0850徐婧语：傅雷对儿子的人生教导</span><br> 
+	  <p align="left" class="STYLE102"><span class="STYLE105">0850：傅雷对儿子的人生教导</span><br> 
 	    <br>
 	    《傅雷家书》俨然是一部呕心沥血的教子之书。他不是普通的家书，是对人生的感慨。对生活的解读。傅雷用这一封封的信给予傅聪，还有后人们对人生的告诫。<br> 
 	    <br>
@@ -610,7 +610,7 @@ pre
 	    <br>
       这本书讲述的人生道理太多，对后人的启发也太多。在他们背后都有相同的一点，那便是对人生积极向上的态度。 </p>
 	  <p align="left" class="STYLE102">&nbsp;</p>
-	  <p align="left" class="STYLE102"><span class="STYLE105">0831张扬柯：傅雷的爱子情深 </span><br>
+	  <p align="left" class="STYLE102"><span class="STYLE105">0831：傅雷的爱子情深 </span><br>
 	    <br>
 	    《傅雷家书》是一位父亲写给儿子最真挚的爱，其中不局限于亲子之情，更包含了做人的道理，艺术感悟和生活琐事。金庸先生曾经评价：“这是一位中国君子在教他的孩子，如何做一个真正的中国君子”。<br> 
 	    <br>
@@ -622,7 +622,7 @@ pre
 	    <br>
       《傅雷家书》充满了父亲对儿子的爱，这爱使一个原本严厉的父亲变得温柔细腻。</p>
 	  <p align="left" class="STYLE102">&nbsp;</p>
-	  <p align="left" class="STYLE102"><span class="STYLE105">0805付子裕：傅雷的赤子之心</span><br> 
+	  <p align="left" class="STYLE102"><span class="STYLE105">0805：傅雷的赤子之心</span><br> 
 	    <br>
 	    “赤子孤独了，会创造一个世界”。这是我国著名文学翻译家傅雷墓碑上的一句话。1966年，傅雷及其夫人被发现双双吊死在书房中。他自缢前的心理感受，我们不得而知，但他贯彻一生的赤子之心，我们却能在其家信中窥探一二。<br> 
 	    <br>
@@ -634,7 +634,7 @@ pre
 	    <br>
 	    “粉骨碎身浑不怕，要留清白在人间”。纵观傅雷先生一生，时时刻刻保持赤子之心。他以他的实际行动，为人民服务，为祖国争光。他的赤子之心，不仅培养了他的两个儿子，更感染了我们几代人。或许，傅雷先生在独属于他的那个世界，露出的是一个满意的笑容。 </p>
 	  <p align="left" class="STYLE102">&nbsp;</p>
-	  <p align="left"><span class="STYLE102"><span class="STYLE105">0822王艺霖：傅雷的爱国之心</span><br>
+	  <p align="left"><span class="STYLE102"><span class="STYLE105">0822：傅雷的爱国之心</span><br>
         <br>
         傅雷在家信中要求傅聪做一个德才兼备，人格卓越的艺术家，而拥有一颗爱国之心，是“人格卓越”的重要部分，也是傅雷在家信中一直培养，渲染傅聪的。<br> 
         <br>
@@ -642,7 +642,7 @@ pre
         <br>
       当时，傅雷傅聪都投身于西方的音乐和艺术。特别是傅聪，常年留学国外还多次获奖，难免会受西方文化，思想的影响，淡忘了对祖国的热爱。时至今日崇洋媚外依然存在，更何况1954年中国还是一个落后的一穷二白的农业国！可是不管是傅雷还是傅聪，他们都坚守自己的品格，保持着一颗挚爱国家的赤子之心，保持着对祖国和人民的无限热爱。傅雷父子的爱国之心令我们敬佩</span><span class="style83">。</span></p>
 	  <p align="left">&nbsp;</p>
-	  <p align="left" class="STYLE102"><span class="STYLE105">0844毛雨洋：傅雷对儿子在为人处世方面的教导</span><br> 
+	  <p align="left" class="STYLE102"><span class="STYLE105">0844：傅雷对儿子在为人处世方面的教导</span><br> 
 	    <br>
 在傅雷给儿子的书信中，傅雷对儿子的教育不仅体现在学习上的指导、生活中的叮咛上，还体现在教傅聪如何为人处世和做人上。<br> 
 <br>
@@ -656,7 +656,7 @@ pre
 <br>
 这绝不是一本普通的家书，它在真情中见真理，诉说中获启迪。他值得当今时代每一个青少年去品读，去学习其中更多的道理。 </p>
 	  <p align="left">&nbsp;</p>
-	  <p align="left" class="STYLE102"><span class="STYLE105">0840黄宝仪：傅雷对儿子的谆谆教导</span> <br>
+	  <p align="left" class="STYLE102"><span class="STYLE105">0840：傅雷对儿子的谆谆教导</span> <br>
 	    <br>
 	    傅雷总在信中写下对儿子的关心和牵挂，虽然只是一张普通的信，但总充满着傅雷对儿子的爱。在1954年3月29日中，明明傅雷也有不适，但却总挂念和关心傅聪的状况，也关心着孩子的情感问题理解他选择后的痛苦心情，虽然它的身份是一位父亲，但总有一位朋友的形象去跟儿子聊天交流，就像一位朋友那样，理性的安慰，告诉他要知足常乐，同时，傅聪也是幸运的，有这样一位长者，能时时保持客观而理智，为他指点迷津，让他少走弯路。<br> 
 	    <br>
@@ -667,7 +667,7 @@ pre
       “勇敢的人不是不落泪的人，而是含着泪水继续奔跑的人”在书中，傅雷总教傅聪该怎么去跨过这些困难，该怎么去经历那些坎坷，只有经历过挫折和困难，才能磨砺坚强的性格，才能超越个人的得失，取得事业的成功。“赤子孤独了，会创造一个世界”这句话映射了傅雷的一生：满身傲骨，宁折不屈，如同谪仙，遗世而独立。这样的父亲教育出的孩子也一定是满身傲骨，不因挫折而打败的人。<br>
       <br>
 	  </p>
-	  <p align="left" class="STYLE102"><span class="STYLE105">0947叶钊颖：傅聪母亲对儿子的情感关怀 </span><br>
+	  <p align="left" class="STYLE102"><span class="STYLE105">0947：傅聪母亲对儿子的情感关怀 </span><br>
 	    <br>
 	    母亲的爱永是这世上最最无私的了。母亲不希望儿子在感情上五分钟热度，冒失冲动，重蹈覆辙。母亲细腻的关怀如春水般令人精神抖擞，令人高视阔步，为儿子的未来严慎敏感，生怕行差踏错，懊悔终生。<br> 
 	    <br>
@@ -678,7 +678,8 @@ pre
 	  母亲以她20余年的经验劝说，望儿子先将精力放置于学业上，切莫荒废了年华，虚度了光阴。而左右叮咛、满心期盼，到最后都化为了一句“孩子，好好保重身体！祝快乐。”这便是母亲从古至今，令人传颂的、如沐春风的舐犊情深了罢。<br>
 	  <br>
 	  <br>
-	  </p> <p align="left" class="STYLE102"><span class="STYLE105">0836丁瑾禹：傅雷对儿子的教导<br>
+	  </p> 
+	  <p align="left" class="STYLE102"><span class="STYLE105">0836：傅雷对儿子的教导<br>
 </span><br>
 	    《傅雷家书》所描写的是一个苛刻的、如风暴一般的父亲对于儿子的无限教导，通过家书的形式展现在了读者面前。 </p>
 	  <p align="left" class="STYLE102">从这本书中可以看出，傅雷对于儿子傅聪的教导看似严厉无情却又充满了常人父亲那种望子成龙的心情。在这点滴教导中，我们也可以体会到傅雷的伟大父亲形象。一开始儿子傅聪前往波兰参加国际钢琴比赛就可以看出，傅雷作为父亲的不舍。再到后来书信中所提及到的种种指引教导，小到提醒他要注意日常生活中的点滴趣事，大到告诫他要慎重对待友谊、如何在国外与人礼貌相处等等事件。 </p>
@@ -686,7 +687,7 @@ pre
 	  <p align="left" class="STYLE102">适时的复习原来所学的知识、充分掌握好时间并能正确区别事情的缓急先后、需要有自己同自己做斗争的勇气，这些都是傅雷所教导予傅聪的。苛刻无情的背后，是一个父亲对于自己孩子的期盼。傅雷对儿子傅聪的教导，成就了多年之后那个站在舞台上闪闪发光却又不骄不躁的傅聪。 <br>
 	    <br>
 	    <br>
-	    <span class="STYLE105">081250张栩涵：傅雷对儿子的爱<br>
+	    <span class="STYLE105">081250：傅雷对儿子的爱<br>
 </span><br>
 	    在1954年4月20日中，“德伏夏克谱二册收到没有到？尽管忙，写信时也得提一提‘来信及谱二册均已收到’，不能光提‘来信都收到’”。表现傅雷作为父亲对儿子管教的事无巨细，体现了严谨严格的家风，也是希望自己付出能得到回报的心理，体现了对孩子的一片真心。<br> 
 	    <br>
@@ -700,7 +701,7 @@ pre
 	    <br>
       综上所述，傅雷对儿子的关心很多时候是以要求和指导的形式体现的。很多时候爱并非总是明显，我们要善于挖掘隐性的爱。 </p>
 	  <p align="left" class="STYLE102">&nbsp; </p>
-	  <p align="left" class="STYLE102"><span class="STYLE105">0807郭浩涵：傅雷对儿子的指引</span><br> 
+	  <p align="left" class="STYLE102"><span class="STYLE105">0807：傅雷对儿子的指引</span><br> 
 	    <br>
 	    傅雷作为一名杰出的翻译家，知识水平相当渊博，自然是希望傅聪能比自己更上一层楼，傅雷除了在信中关心傅聪，与傅聪交代生活琐事之外，还在信中说出了种种对儿子的期望，以及对未来的规划，这些话不仅教导于傅聪，同样也令我感受深刻。 <br>
         <br>
@@ -711,7 +712,7 @@ pre
 傅雷曾无数次用接近恳求的语气让儿子回信，但很显然傅聪并没有听进去，直到最后一封信，傅雷还是说：别让我们等你的信再等下去了！孩子！一切保重！这三个感叹号尽显了傅雷的无奈。可怜天下父母心，有时儿女们的一封信，一句话，就可以让他们欢欣半天，所以我们在往前跑的时候，应该常回头看看父母，懂得感恩，毕竟以前是他们领着我们向前走的呀。<br>
 <br>
 <br>
-<span class="STYLE105">0851严逸冰：对孩子真挚而热烈的爱</span><br>
+<span class="STYLE105">0851：对孩子真挚而热烈的爱</span><br>
 	  <br>
 	  “园丁以血泪灌溉出来的花果迟早得送到人间去让别人享受，可是在离别的关头怎么免得了割舍不得的情绪呢？”这是傅雷在刚告别儿子时的一段话。这里面包含了一个父亲对儿子要远走高飞时的难过、留恋、悲痛和不舍。这样真挚而热烈的感情把傅雷对孩子的爱体现得淋漓尽致。<br> 
 	  <br>
