--- a/桃李天下.html
+++ b/桃李天下.html
@@ -61,7 +61,7 @@ a:hover {
   <p><img loading="lazy" src="a.jpg" width="125" height="125" />&nbsp;<span class="style22">仁义礼智信 正大自光明 &nbsp;</span>&nbsp;&nbsp;&nbsp;&nbsp; <a href="index.html">返回首页</a>&nbsp;&nbsp;
     <a href="czjszbzrsp.html"></a>&nbsp;&nbsp;&nbsp;</p>
   <p>影像记忆：<a href="2006.html">2006</a>届   <a href="2009.html">2009</a>届   <a href="2012.html">2012</a>届   <a href="2015.html">2015</a>届   <a href="2018.html">2018</a>届   <a href="2019.html">2018级9班（初一）</a> <a href="2020.html"> 2020届6班（初三）</a></p>
-  <p><span class="STYLE34"><a href="学生创作2018前.html">学生作品（2018前）</a>&nbsp; &nbsp; <a href="学生创作.html">学生作品（2018=19）</a>&nbsp; &nbsp;<a href="学生创作2020级.html">学生作业（2020级）</a></span></p>
+  <p><span class="STYLE34"><a href="学生创作.html">学生作品（2018前）</a>&nbsp; &nbsp;<a href="学生创作2020级.html">学生作业（2020级）</a></span></p>
 </div>
 <p class="style3"><br />
   <br />
