--- a/czjszsz.html
+++ b/czjszsz.html
@@ -206,13 +206,13 @@ a:hover {
 <div align="center"><span lang="EN-US" style="mso-bidi-font-size: 10.5pt; line-height: 150%; font-family: &quot;simsun&quot;,&quot;serif&quot;; mso-bidi-font-family: 宋体; color: #323E32; mso-font-kerning: 0pt">
   <o:p>
   <span class="style18"><a href="与南师.htm">与南师</a></span><span class="STYLE23"><a href="清流/原本大学微言笔记.htm"><br />
-  《原本大学微言》摘</a><a href="清流/东坡志林摘要.htm">《</a></span><br />
+  《原本大学微言》摘</a><a href="清流/东坡志林摘要.htm"></a></span><br />
   <span style="font-family: 黑体; mso-hansi-font-family: Calibri" class="style18">
   <a href="关于“皇者之声”的审美.htm">关于“皇者之声”的审美</a></span><span lang="EN-US">
   <o:p>
   </span></span></div>
 <p align="center"><a href="《非虚构写作》阅读笔记.htm">《非虚构写作》摘</a></p>
-<p align="center"><span class="STYLE23"><a href="清流/东坡志林摘要.htm">东坡志林》摘</a><a href="清流/足球，在脚下.htm"></a></span></p>
+<p align="center"><span class="STYLE23"><a href="清流/东坡志林摘要.htm">《东坡志林》摘</a><a href="清流/足球，在脚下.htm"></a></span></p>
 <p align="center" class="STYLE35">&nbsp;</p>
 </div>
 <div style="position: absolute; width: 372px; height: 387px; z-index: 5; left: 44px; top: 158px" id="layer2" class="style14">
@@ -232,7 +232,7 @@ a:hover {
   <p align="center"><a href="两种“时间”在语文教学中的对视.htm">两种时间</a><br />
     <br />
     <a href="清流/论语微摘.htm">《论语》微摘</a></p>
-  <p align="center"><a href="文心雕龙摘录.htm">《文心雕龙》摘录</a></p>
+  <p align="center"><a href="文心雕龙摘录.htm" class="STYLE34">《文心雕龙》摘录</a></p>
 	<p align="center"><span class="STYLE27"><a href="“我的时间”之分析.htm">“我的时间”之分析</a></span></p>
 	<p align="center"><a href="力行的德育（深圳中学陈正君）.htm" target="_blank" class="STYLE34">力行的德育</a></p>
 	<p><img src="jpg/工作室/工作室20201027.jpg" width="174" height="242" /> <img src="jpg/工作室/202501.jpg" width="159" height="242" /></p>
