--- a/czjszbzrtu.html
+++ b/czjszbzrtu.html
@@ -63,12 +63,13 @@ a:hover {
 <p class="style32">&nbsp;</p>
 <table style="width: 100%" class="style36">
 				<tr>
-				  <td class="STYLE38" style="width: 382px">202501</td>
-				  <td rowspan="2" class="style33">&nbsp;</td>
+				  <td class="STYLE38" style="width: 382px">202412教育局颁证书奖章</td>
+				  <td class="style33"><span class="STYLE38" style="width: 382px">202501新书出版了</span></td>
 				  <td rowspan="2" class="style33">&nbsp;</td>
   </tr>
 				<tr>
-				  <td class="style33" style="width: 382px"><img loading="lazy" src="jpg/工作室/202501.jpg" width="181" height="264" /></td>
+				  <td class="style33" style="width: 382px"><img src="jpg/工作室/20年证明.jpg" width="264" height="352" /></td>
+                  <td class="style33"><span class="style33" style="width: 382px"><img loading="lazy" src="jpg/工作室/202501.jpg" width="264" height="352" /></span></td>
   </tr>
 				<tr>
 				  <td class="style33" style="width: 382px"><span class="style33" style="width: 382px">20211030成员参加深大班主任发展论坛</span></td>
