--- a/czjszsz.html
+++ b/czjszsz.html
@@ -235,7 +235,7 @@ a:hover {
   <p align="center"><a href="文心雕龙摘录.htm" class="STYLE34">《文心雕龙》摘录</a></p>
 	<p align="center"><span class="STYLE27"><a href="“我的时间”之分析.htm">“我的时间”之分析</a></span></p>
 	<p align="center"><a href="力行的德育（深圳中学陈正君）.htm" target="_blank" class="STYLE34">力行的德育</a></p>
-	<p><img src="jpg/工作室/工作室20201027.jpg" width="174" height="242" /> <img src="jpg/工作室/202501.jpg" width="159" height="242" /></p>
+	<p><a href="https://book.douban.com/subject/35430199/"><img src="jpg/工作室/工作室20201027.jpg" width="174" height="242" border="0" /></a> <a href="https://book.douban.com/subject/37285330/"><img src="jpg/工作室/202501.jpg" width="159" height="242" border="0" /></a></p>
 </div>
 
 </body>
