--- a/2019.html
+++ b/2019.html
@@ -77,8 +77,8 @@ a:hover {
 <p><img loading="lazy" src="jpg/2019/班48.jpg" width="350" height="262" /><img loading="lazy" src="jpg/2019/班50.jpg" width="350" height="262" /><img loading="lazy" src="jpg/2019/班60.jpg" width="350" height="262" /></p>
 <p><img loading="lazy" src="jpg/2019/班63.jpg" width="445" height="250" /><img loading="lazy" src="jpg/2019/班65.jpg" width="445" height="250" /></p>
 <p><img loading="lazy" src="jpg/2019/班67.jpg" width="600" height="404" /><img loading="lazy" src="jpg/2019/班62.jpg" width="300" height="194" /></p>
-<p><img loading="lazy" src="jpg/2019/班70.jpg" width="374" height="250" /><img loading="lazy" src="jpg/2019/班71.jpg" width="374" height="250" /><img loading="lazy" src="jpg/2019/班72.jpg" width="374" height="250" /><img loading="lazy" src="jpg/2019/班73.jpg" width="374" height="250" /></p>
-<p><img loading="lazy" src="jpg/2019/班74.jpg" width="374" height="250" /><img loading="lazy" src="jpg/2019/班75.jpg" width="374" height="250" /></p>
+<p><img loading="lazy" src="jpg/2019/班70.jpg" width="374" height="250" /><img loading="lazy" src="jpg/2019/班71.jpg" width="374" height="250" /><img loading="lazy" src="jpg/2019/班72.jpg" width="374" height="250" /><img loading="lazy" src="jpg/2019/班73.jpg" width="374" height="250" /><img loading="lazy" src="jpg/2019/班74.jpg" width="374" height="250" /><img loading="lazy" src="jpg/2019/班75.jpg" width="374" height="250" /></p>
+<p>&nbsp;</p>
 <p><img loading="lazy" src="jpg/2019/班77.jpg" width="374" height="250" /><img loading="lazy" src="jpg/2019/班78.jpg" width="374" height="250" /></p>
 <p><img loading="lazy" src="jpg/2019/班81.jpg" width="333" height="250" /><img loading="lazy" src="jpg/2019/班82.jpg" width="333" height="250" /><img loading="lazy" src="jpg/2019/班83.jpg" width="333" height="250" /></p>
 <p><img loading="lazy" src="jpg/2019/班92.jpg" width="400" height="300" /><img loading="lazy" src="jpg/2019/班93.jpg" width="400" height="300" /></p>
@@ -95,10 +95,9 @@ a:hover {
 <p><img loading="lazy" src="jpg/2019/班158.jpg" width="392" height="262" /><img loading="lazy" src="jpg/2019/班168.jpg" width="466" height="262" /></p>
 <p><img loading="lazy" src="jpg/2019/班161.jpg" width="350" height="233" /><img loading="lazy" src="jpg/2019/班164.jpg" width="350" height="233" /><img loading="lazy" src="jpg/2019/班165.jpg" width="350" height="233" /></p>
 <p><img loading="lazy" src="jpg/2019/班166.jpg" width="350" height="233" /><img loading="lazy" src="jpg/2019/班170.jpg" width="310" height="233" /><img loading="lazy" src="jpg/2019/班160.jpg" width="350" height="233" /></p>
-<p><img loading="lazy" src="jpg/2019/班167.jpg" width="392" height="262" /><img loading="lazy" src="jpg/2019/班159.jpg" width="392" height="262" /></p>
-<p><img loading="lazy" src="jpg/2019/班162.jpg" width="350" height="233" /><img loading="lazy" src="jpg/2019/班169.jpg" width="350" height="233" /><img loading="lazy" src="jpg/2019/班171.jpg" width="310" height="233" /></p>
-<p><img loading="lazy" src="jpg/2019/班176.jpg" width="392" height="262" /><img loading="lazy" src="jpg/2019/班178.jpg" width="393" height="262" /></p>
-<p><img loading="lazy" src="jpg/2019/班181.jpg" width="393" height="262" /><img loading="lazy" src="jpg/2019/班177.jpg" width="392" height="262" /></p>
+<p><img loading="lazy" src="jpg/2019/班167.jpg" width="392" height="262" /><img loading="lazy" src="jpg/2019/班169.jpg" width="350" height="233" /><img loading="lazy" src="jpg/2019/班162.jpg" width="350" height="233" /></p>
+<p><img loading="lazy" src="jpg/2019/班171.jpg" width="310" height="233" /><img loading="lazy" src="jpg/2019/班159.jpg" width="354" height="232" /></p>
+<p><img loading="lazy" src="jpg/2019/班178.jpg" width="354" height="233" /><img loading="lazy" src="jpg/2019/班181.jpg" width="326" height="235" /><img loading="lazy" src="jpg/2019/班177.jpg" width="326" height="237" /></p>
 <p><img loading="lazy" src="jpg/2019/班182.jpg" width="349" height="262" /><img loading="lazy" src="jpg/2019/班183.jpg" width="349" height="262" /><img loading="lazy" src="jpg/2019/班187.jpg" width="375" height="262" /></p>
 <p><img loading="lazy" src="jpg/2019/班189.jpg" width="400" height="301" /><img loading="lazy" src="jpg/2019/班190.jpg" width="400" height="300" /></p>
 <p><img loading="lazy" src="jpg/2019/班192.jpg" width="400" height="300" /><img loading="lazy" src="jpg/2019/班193.jpg" width="400" height="300" /></p>
@@ -107,14 +106,14 @@ a:hover {
 <p><img loading="lazy" src="jpg/2019/班211.jpg" width="449" height="300" /><img loading="lazy" src="jpg/2019/班212.jpg" width="449" height="300" /></p>
 <p><img loading="lazy" src="jpg/2019/班213.jpg" width="449" height="300" /><img loading="lazy" src="jpg/2019/班214.jpg" width="450" height="300" /></p>
 <p><img loading="lazy" src="jpg/2019/班215.jpg" width="534" height="300" /><img loading="lazy" src="jpg/2019/班216.jpg" width="200" height="299" /></p>
-<p><img loading="lazy" src="jpg/2019/班219.jpg" width="449" height="300" /><img loading="lazy" src="jpg/2019/班218.jpg" width="449" height="300" /></p>
-<p><img loading="lazy" src="jpg/2019/班217.jpg" width="449" height="300" /><img loading="lazy" src="jpg/2019/班220.jpg" width="449" height="300" /></p>
-<p><img loading="lazy" src="jpg/2019/班221.jpg" width="449" height="300" /><img loading="lazy" src="jpg/2019/班222.jpg" width="449" height="300" /></p>
-<p><img loading="lazy" src="jpg/2019/班224.jpg" width="449" height="300" /><img loading="lazy" src="jpg/2019/班203.jpg" width="196" height="262" /></p>
-<p><img loading="lazy" src="jpg/2019/班225.jpg" width="350" height="233" /><img loading="lazy" src="jpg/2019/班228.jpg" width="350" height="233" /><img loading="lazy" src="jpg/2019/班231.jpg" width="350" height="233" /></p>
-<p><img loading="lazy" src="jpg/2019/班233.jpg" width="349" height="262" /><img loading="lazy" src="jpg/2019/班234.jpg" width="350" height="262" /><img loading="lazy" src="jpg/2019/班235.jpg" width="350" height="262" /></p>
+<p><img loading="lazy" src="jpg/2019/班219.jpg" width="395" height="218" /><img loading="lazy" src="jpg/2019/班218.jpg" width="348" height="217" /></p>
+<p><img loading="lazy" src="jpg/2019/班217.jpg" width="393" height="220" /><img loading="lazy" src="jpg/2019/班220.jpg" width="357" height="221" /></p>
+<p><img loading="lazy" src="jpg/2019/班221.jpg" width="401" height="210" /><img loading="lazy" src="jpg/2019/班222.jpg" width="370" height="208" /></p>
+<p><img loading="lazy" src="jpg/2019/班224.jpg" width="449" height="300" /><img loading="lazy" src="jpg/2019/班203.jpg" width="238" height="300" /></p>
+<p><img loading="lazy" src="jpg/2019/班225.jpg" width="350" height="233" /><img loading="lazy" src="jpg/2019/班228.jpg" width="350" height="233" /></p>
+<p><img loading="lazy" src="jpg/2019/班233.jpg" width="349" height="262" /><img loading="lazy" src="jpg/2019/班234.jpg" width="350" height="262" /></p>
 <p><img loading="lazy" src="jpg/2019/班240.jpg" width="350" height="262" /><img loading="lazy" src="jpg/2019/班241.jpg" width="350" height="262" /><img loading="lazy" src="jpg/2019/班242.jpg" width="350" height="262" /></p>
-<p><img loading="lazy" src="jpg/2019/入学1.1.jpg" width="400" height="300" /><img loading="lazy" src="jpg/2019/入学1.jpg" width="400" height="300" /><img loading="lazy" src="jpg/2019/入学2.jpg" width="400" height="300" /><img loading="lazy" src="jpg/2019/入学3.jpg" width="500" height="375" /></p>
+<p><img loading="lazy" src="jpg/2019/入学1.1.jpg" width="400" height="300" /><img loading="lazy" src="jpg/2019/入学1.jpg" width="400" height="300" /><img loading="lazy" src="jpg/2019/入学2.jpg" width="400" height="300" /><img loading="lazy" src="jpg/2019/入学3.jpg" width="445" height="299" /></p>
 <p><img loading="lazy" src="jpg/2019/班4.jpg" width="250" height="333" /><img loading="lazy" src="jpg/2019/班5.jpg" width="207" height="333" /><img loading="lazy" src="jpg/2019/班7.jpg" width="250" height="333" /><img loading="lazy" src="jpg/2019/班8.jpg" width="250" height="333" /></p>
 <p><img loading="lazy" src="jpg/2019/班10.jpg" width="350" height="262" /><img loading="lazy" src="jpg/2019/班236.jpg" width="350" height="262" /><img loading="lazy" src="jpg/2019/班21.jpg" width="350" height="262" /></p>
 <p><img loading="lazy" src="jpg/2019/班20.jpg" width="250" height="333" /><img loading="lazy" src="jpg/2019/班41.jpg" width="250" height="333" /><img loading="lazy" src="jpg/2019/班42.jpg" width="450" height="333" /></p>
@@ -124,11 +123,7 @@ a:hover {
 <p><img loading="lazy" src="jpg/2019/班141.jpg" width="300" height="250" /><img loading="lazy" src="jpg/2019/班147.jpg" width="333" height="250" /><img loading="lazy" src="jpg/2019/班191.jpg" width="187" height="250" /></p>
 <p><img loading="lazy" src="jpg/2019/班175.jpg" width="349" height="262" /><img loading="lazy" src="jpg/2019/班206.jpg" width="196" height="262" /><img loading="lazy" src="jpg/2019/班207.jpg" width="400" height="262" /></p>
 <p><img loading="lazy" src="jpg/2019/邓一晨参赛.jpg" width="391" height="294" /><img loading="lazy" src="jpg/2019/经1.jpg" width="200" height="266" /><img loading="lazy" src="jpg/2019/经2.jpg" width="266" height="200" /></p>
-<p><img loading="lazy" src="jpg/2019/班16.jpg" width="154" height="205" /></p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
 <p class="style3">&nbsp;</p>
-<p class="style25">&nbsp;</p>
 <p class="style25">&nbsp;</p>
 <p class="style25">&nbsp;</p>
 <p class="style3">&nbsp;</p>
