--- a/2019.html
+++ b/2019.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-cn" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>2019级9班影像集</title>
+<title>2018级9班初一影像集</title>
 <style type="text/css">
 .style3 {
 	text-align: center;
