--- a/czjszbzrtu.html
+++ b/czjszbzrtu.html
@@ -120,34 +120,24 @@ a:hover {
                   <td class="style33"><img loading="lazy" src="jpg/工作室/工作室202105191.jpg" width="339" height="226" /></td>
   </tr>
 				<tr>
-				  <td class="style33" style="width: 382px"><span class="style33" style="width: 382px">20210325新书送达</span></td>
-                  <td class="style33">20210326邮寄新书</td>
+				  <td class="style33" style="width: 382px">20210223新书定稿</td>
+				  <td class="style33">20210326邮寄新书</td>
                   <td class="style33">20210418<a href="https://mp.weixin.qq.com/s/qLUw4TTj_FHO7RtuPaE7sA">星火沙龙活动</a></td>
   </tr>
 				<tr>
-				  <td class="style33" style="width: 382px"><img loading="lazy" src="jpg/工作室/工作室20210325.jpg" width="339" height="254" /></td>
-				  <td class="style33"><img loading="lazy" src="jpg/工作室/工作室20210228.jpg" width="339" height="249" /></td>
+				  <td class="style33" style="width: 382px"><img loading="lazy" src="jpg/工作室/工作室20210223.jpg" width="339" height="249" /></td>
+                  <td class="style33"><img loading="lazy" src="jpg/工作室/工作室20210228.jpg" width="339" height="249" /></td>
                   <td class="style33"><img loading="lazy" src="jpg/工作室/工作室20210418.jpg" width="339" height="249" /></td>
   </tr>
 				<tr>
-				  <td class="style33" style="width: 382px"><span class="style33" style="width: 382px">20201112付梓签章</span></td>
-				  <td class="style33">20201209案例集出版合同</td>
-                  <td class="style33">20210223新书定稿</td>
+				  <td class="style33" style="width: 382px"><span class="style33" style="width: 382px">20201028市民中心汇报</span></td>
+                  <td class="style33">20201103北师大招聘老师</td>
+                  <td class="style33">20201209案例集出版合同</td>
   </tr>
 				<tr>
-				  <td class="style33" style="width: 382px"><img loading="lazy" src="jpg/工作室/工作室20201112.jpg" width="339" height="249" /></td>
+				  <td class="style33" style="width: 382px"><span class="style33" style="width: 382px"><img loading="lazy" src="jpg/工作室/工作室20201028.jpg" width="333" height="249" /></span></td>
+                  <td class="style33"><img loading="lazy" src="20208/平72.jpg" width="215" height="249" /></td>
                   <td class="style33"><img loading="lazy" src="jpg/工作室/工作室20201209.jpg" width="339" height="249" /></td>
-                  <td class="style33"><img loading="lazy" src="jpg/工作室/工作室20210223.jpg" width="339" height="249" /></td>
-  </tr>
-				<tr>
-				  <td class="style33" style="width: 382px"><span class="style33" style="width: 382px">20201027样书封面</span></td>
-                  <td class="style33"><span class="style33" style="width: 382px">20201028市民中心汇报</span></td>
-                  <td class="style33">20201103北京</td>
-  </tr>
-				<tr>
-				  <td class="style33" style="width: 382px"><img loading="lazy" src="jpg/工作室/工作室20201027.jpg" width="180" height="249" /></td>
-                  <td class="style33"><span class="style33" style="width: 382px"><img loading="lazy" src="jpg/工作室/工作室20201028.jpg" width="333" height="249" /></span></td>
-                  <td class="style33"><img loading="lazy" src="20208/平72.jpg" width="230" height="249" /></td>
   </tr>
 				<tr>
 				  <td class="style33" style="width: 382px"><span class="style33" style="width: 382px">20200922邮寄读本</span></td>
@@ -261,12 +251,12 @@ a:hover {
   </tr>
 				<tr>
 				  <td class="style33" style="width: 382px"><span class="style33" style="width: 382px">20190418 深圳初中名师课堂</span></td>
-                  <td class="style33">20190422 先锋898直播</td>
+                  <td class="style33">20190418 <span class="style33" style="width: 382px">深圳初中名师课堂</span></td>
                   <td class="style33">20190510 家长会上谈成长</td>
   </tr>
 				<tr>
 				  <td class="style33" style="width: 382px"><img loading="lazy" src="jpg/工作室/工作室7.jpg" width="333" height="250" alt=""/></td>
-				  <td class="style33"><img loading="lazy" src="jpg/工作室/工作室8.jpg" width="333" height="250" alt=""/></td>
+				  <td class="style33"><img src="jpg/工作室/工作室20190418.jpg" width="333" height="250" /></td>
 				  <td class="style33"><img loading="lazy" src="jpg/工作室/jia18.jpg" width="333" height="249" /></td>
   </tr>
 				<tr>
