--- a/与南师.htm
+++ b/与南师.htm
@@ -34,7 +34,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td class="style2"><br />
+		<td class="style2"><p><br />
 		【南师作古，是学界大事。故录去年国庆读书心得一篇于此，以慰情理】<br />
 		<br />
 		中秋，家长朋友赵生赠我一套《南怀瑾全集》，一直摩抚，苦无时间啃读。终于到了国庆长假，才抽其第四卷，读其关于道教、密宗、静坐、禅宗、长生不老等内容的论述。并与以前练习气功、学佛读经的体会进行梳理，感觉通达了很多。一方面，关于南师的人生经历，颇感震撼和敬佩；一方面关于学问的功夫与体悟。<br />
@@ -57,13 +57,13 @@
 		□关于“三理”，医理、命理、地理。这三理之中，命理我涉猎不够，不会算；医理也在学习中医入门读本；地理方面接触过一点，但不通。读南师的论述，对学人提出了这三方面的要求，我想也应该试着做一做。<br />
 		<br />
 		<br />
-		□学习的迷障。有些学问似乎已经形成既定的调子，或被否定，或予不理，如密宗的神秘力，道家的神秘力，包括人的第六七八识，都被长久的搁置，这些方面要走得更远，必须扫除一些既定的障碍，不能简单视之为迷信。<br />
-		<br />
-		<br />
-		写于2011年10月7日<br />
-		<span class="style4"><br />
-		</span><br />
-		</td>
+		□学习的迷障。有些学问似乎已经形成既定的调子，或被否定，或予不理，如密宗的神秘力，道家的神秘力，包括人的第六七八识，都被长久的搁置，这些方面要走得更远，必须扫除一些既定的障碍。
+    <br />
+		    </p>
+		  <p>写于2011年10月7日<br />
+	        <span class="style4"><br />
+                </span><br />
+        </p></td>
 	</tr>
 	<tr>
 		<td class="style1"><img loading="lazy" src="lian.jpg" width="888" height="230" /></td>
