--- a/古意.htm
+++ b/古意.htm
@@ -119,7 +119,7 @@
 	        <br />
 		        <span class="style4"><br />
 		          <br />
-	                </span>
+            </span>
 		        <span class="style6">虞美人<br />
 		          <br />
   &nbsp;其一<br />
@@ -150,11 +150,16 @@
 	      乌衣媚影落飞檐，<br />
 	      不觉华灯数点。</p>
 		  <p class="style6">&nbsp;</p>
-		  <p class="style6">今日初五，立春日，作诗一首。</p>
+		  <p class="style6">今日初五，立春日，满四十，作诗一首。</p>
 		  <p class="style6">正月东乡舞狮龙，老屋灶角炭火红。<br />
 	      君山垸内水稻熟，巴陵桥下机车隆。<br />
 	      壮志曾游泰山顶，齐家时沐南海风。<br />
 	      青春不惑浮云远，日月都在耘耔中。</p>
+		  <p class="style6">满五十，一家人吃了蛋糕，亦作诗一首</p>
+		  <p class="style6">龙年正月暖洋洋，回首一岁话新章。<br />
+		  春日收房往深荟，秋天入职在梅香。<br />
+		  寒暑两度回乡里，父母四老乐健康。<br />
+		  多闲多读多参悟，君子之道清且长。</p>
 		  <p class="style6">&nbsp;</p>
 		  <p class="style6">翠竹山</p>
 		  <p class="style6">其一<br />
@@ -181,6 +186,82 @@
 	      万木欣荣正逢时，清明时节春意浓。仙湖水碧映山客，一步一声哭焕翁。</p>
 		  <p class="style6">（四）<br />
 	      四方信众思长老，长老无言寄天涯。莫悲佛界亡尊者，喜送人间老人家。</p>
+		  <div class="style6">
+		    <p>&nbsp;</p>
+		    <p>读完李馥旻的《张爱玲传》，作诗五首。</p>
+		  </div>
+		  <div class="style6"><br />
+	      </div>
+		  <div class="style6">（一）1920出生-1938上海</div>
+		  <div class="style6">天地云烟起，东西水火行。<br />
+	      祖德荫功业，家风重世名。<br />
+	      富贵无万代，兰桂有千金。<br />
+	      尘埃花一朵，唤作张爱玲。</div>
+		  <div class="style6"><br />
+	      </div>
+		  <div class="style6">（二）1939-1942港大</div>
+		  <div class="style6">香江清又浅，常照孤且直。<br />
+	      炎樱似故旧，亲母如未识。<br />
+	      文美无嘉赏，兵荒多死时。<br />
+	      辍归离恨地，潦倒作新词。</div>
+		  <div class="style6"><br />
+	      </div>
+		  <div class="style6">（三）1943-1945-1952上海</div>
+		  <div class="style6">出名要趁早，大运有时限。</div>
+		  <div class="style6">几炉沉香屑，一曲倾城恋。</div>
+		  <div class="style6">渗开翰林梦，揉碎文苑险。<br />
+	      喧嚣上海滩，旗袍独娇艳。</div>
+		  <div class="style6"><br />
+	      </div>
+		  <div class="style6">（四）1944相遇-1947离婚-1958《今生今世》-1981去世</div>
+		  <div><span class="style6">文曲名噪远，惊动胡兰成。<br />
+	      鹿饮凡三往，狐迷无一声。<br />
+	      巧语说契阔，轻诺何足征？<br />
+	      缥缈东瀛客，闲坐话今生。
+		    </span>
+		    <div class="style6"><br />
+	        </div>
+		    <p class="style6">（五）1955赴美-1956结婚-1967夫殁-1995去世<br />
+		    断然去家国，远嫁异乡人。<br />
+		    新婚无夜宴，旧好不知门。<br />
+		    情深病夫殁，纸贱俏笔沉。<br />
+		    彼岸花自谢，淹然一微尘。</p>
+		    <p class="style6">&nbsp;</p>
+		  </div>
+		  <div align="left" class="style6">
+		    <div align="left"><span class="style4">今日第一节在13班讲杜甫的《茅屋为秋风所破歌》，第二节没课，就写起诗来。第三节课在14班边讲杜甫的诗边诵自己写的4首诗，感觉有意思。录下来：</span>                    </div>
+		  </div>
+		  <div align="left" class="style6">                 
+		    <div align="center">草堂<br />
+	        浣花溪畔筑草堂，茅草三重映斜阳。
+	        竹影霞飞池中景，粗茶淡酒亦诗章。<br />
+	        <span class="style4">（乱世之中，能够有一个栖身之所已属不易。更何况还有溪水浅塘、茂林修竹在侧呢。）</span><br />
+            </div>
+		  </div>
+		  <div align="left" class="style6">                 
+		    <div align="center">娇儿<br />
+浣花溪里摸鱼乐，翠竹林中戏晨昏。
+		      稚气娇儿身体弱，怕生莫独往南村。<br />
+		      <span class="style4">（南村群童太顽劣，以众欺寡，以壮欺老，不思助人，反公然作恶，自己的孩子只怕也要受他们捉弄。）</span><br />
+	          </div>
+		  </div>
+		  <div align="left" class="style6"> </div>
+		  <div align="left" class="style6">                  
+		    <div align="center">秋雨<br />
+	        春花秋月不等闲，风尘苦旅行路难。
+          丧乱流离今安在，一窗秋雨一家寒。</div>
+		  </div>
+		  <div align="left" class="style6">
+		    <div align="center"><span class="style4">（这里化用了李白的《行路难》）</span><br />
+	        </div>
+		  </div>
+		  <div align="left" class="style6">
+		    <div align="center">
+		      <p>寒士<br />
+		        寒士庐破意气在，自家生死有价开。
+	          换得万千清平乐，魂抛野外不须埋。</p>
+	        </div>
+		  </div>
 		  <p class="style6">&nbsp;</p>
 		  <p class="style6"><br />
           菩萨蛮<br />
@@ -194,8 +275,7 @@
 		  <p align="left" class="style6"> 二十八年光辉，好日子得意东风催。荡小舟行钓，香江河顺，红树湾浅，沙井蚝肥。岸榕如柳，勒杜鹃醉，人家门巷莺燕回。凭谁问：锦绣何处瞰？莲花山巍。</p>
 		  <p class="style6">&nbsp;</p>
 		  <p class="style6">&nbsp;</p>
-		</div>
-	  </td>
+		</div>	  </td>
 	</tr>
 	<tr>
 		<td class="style1"><img loading="lazy" src="lian.jpg" width="888" height="230" /></td>
