--- a/czjszsz.html
+++ b/czjszsz.html
@@ -205,15 +205,17 @@ a:hover {
   </a></span><span lang="EN-US" style="mso-bidi-font-size: 10.5pt; line-height: 150%; font-family: &quot;simsun&quot;,&quot;serif&quot;; mso-bidi-font-family: 宋体; color: #323E32; mso-font-kerning: 0pt"><span class="STYLE23"><a href="清流/足球，在脚下.htm">足球，在脚下</a></span></span></p>
 <div align="center"><span lang="EN-US" style="mso-bidi-font-size: 10.5pt; line-height: 150%; font-family: &quot;simsun&quot;,&quot;serif&quot;; mso-bidi-font-family: 宋体; color: #323E32; mso-font-kerning: 0pt">
   <o:p>
-  <span class="style18"><a href="与南师.htm">与南师</a></span><span class="STYLE23"><a href="清流/原本大学微言笔记.htm"><br />
-  《原本大学微言》摘</a><a href="清流/东坡志林摘要.htm"></a></span><br />
-  <span style="font-family: 黑体; mso-hansi-font-family: Calibri" class="style18">
-  <a href="关于“皇者之声”的审美.htm">关于“皇者之声”的审美</a></span><span lang="EN-US">
-  <o:p>
-  </span></span></div>
+</span>
+  <p><span lang="EN-US" style="mso-bidi-font-size: 10.5pt; line-height: 150%; font-family: &quot;simsun&quot;,&quot;serif&quot;; mso-bidi-font-family: 宋体; color: #323E32; mso-font-kerning: 0pt">    <span class="style18"><a href="与南师.htm">与南师</a></span><span class="STYLE23"><a href="清流/原本大学微言笔记.htm"><br />
+      《原本大学微言》摘</a><a href="清流/东坡志林摘要.htm"></a></span></span></p>
+  <p><span lang="EN-US" style="mso-bidi-font-size: 10.5pt; line-height: 150%; font-family: &quot;simsun&quot;,&quot;serif&quot;; mso-bidi-font-family: 宋体; color: #323E32; mso-font-kerning: 0pt"><a href="进学与养心.htm" target="_blank">进学与养心</a><br />
+      <span style="font-family: 黑体; mso-hansi-font-family: Calibri" class="style18">
+      <a href="关于“皇者之声”的审美.htm">关于“皇者之声”的审美</a></span><span lang="EN-US">
+      </span></span></p>
+  </div>
 <p align="center"><a href="《非虚构写作》阅读笔记.htm">《非虚构写作》摘</a></p>
 <p align="center"><span class="STYLE23"><a href="清流/东坡志林摘要.htm">《东坡志林》摘</a><a href="清流/足球，在脚下.htm"></a></span></p>
-<p align="center" class="STYLE35">&nbsp;</p>
+<p align="center" class="STYLE35"><a href="https://www.ximalaya.com/album/57580974" target="_blank">傅雷家书 跳读</a> </p>
 </div>
 <div style="position: absolute; width: 372px; height: 387px; z-index: 5; left: 44px; top: 158px" id="layer2" class="style14">
   <p align="center"><span class="style16">学&nbsp; 理<br />
@@ -233,6 +235,7 @@ a:hover {
     <br />
     <a href="清流/论语微摘.htm">《论语》微摘</a></p>
   <p align="center"><a href="文心雕龙摘录.htm" class="STYLE34">《文心雕龙》摘录</a></p>
+  <p align="center"><a href="https://www.ximalaya.com/jiaoyupeixun/56116556/" target="_blank">（金句朗读 喜马拉雅上）</a></p>
 	<p align="center"><span class="STYLE27"><a href="“我的时间”之分析.htm">“我的时间”之分析</a></span></p>
 	<p align="center"><a href="力行的德育（深圳中学陈正君）.htm" target="_blank" class="STYLE34">力行的德育</a></p>
 	<p><a href="https://book.douban.com/subject/35430199/"><img src="jpg/工作室/工作室20201027.jpg" width="174" height="242" border="0" /></a> <a href="https://book.douban.com/subject/37285330/"><img src="jpg/工作室/202501.jpg" width="159" height="242" border="0" /></a></p>
