--- a/2015.html
+++ b/2015.html
@@ -63,12 +63,11 @@ a:hover {
   <p>&nbsp;</p>
 </div>
 <p><img loading="lazy" src="jpg/2015/(102).jpg" width="904" height="450" /></p>
-<p><img loading="lazy" src="jpg/2015/(52).jpg" width="450" height="300" /> <img loading="lazy" src="jpg/2015/(55).jpg" width="450" height="300" /></p>
-<p><img loading="lazy" src="jpg/2015/(58).jpg" width="450" height="300" /><img loading="lazy" src="jpg/2015/(60).jpg" width="450" height="300" /></p>
+<p>&nbsp;</p>
+<p><img loading="lazy" src="jpg/2015/(58).jpg" width="450" height="300" /><img loading="lazy" src="jpg/2015/(60).jpg" width="450" height="300" /><img loading="lazy" src="jpg/2015/(52).jpg" width="450" height="300" /><img loading="lazy" src="jpg/2015/(71).jpg" width="450" height="300" /></p>
 <p><img loading="lazy" src="jpg/2015/(64).jpg" width="450" height="300" /> <img loading="lazy" src="jpg/2015/(63).jpg" width="450" height="300" /></p>
-<p><img loading="lazy" src="jpg/2015/(71).jpg" width="450" height="300" /> <img loading="lazy" src="jpg/2015/(70).jpg" width="450" height="300" /></p>
-<p><img loading="lazy" src="jpg/2015/(72).jpg" width="450" height="300" /> <img loading="lazy" src="jpg/2015/(54).jpg" width="450" height="300" /></p>
-<p><img loading="lazy" src="jpg/2015/(81).jpg" width="450" height="300" /> <img loading="lazy" src="jpg/2015/(83).jpg" width="450" height="300" /></p>
+<p>&nbsp;</p>
+<p><img loading="lazy" src="jpg/2015/(72).jpg" width="450" height="300" /><img loading="lazy" src="jpg/2015/(70).jpg" width="450" height="300" /></p>
 <p><img loading="lazy" src="jpg/2015/(87).jpg" width="450" height="300" /> <img loading="lazy" src="jpg/2015/(95).jpg" width="450" height="300" /></p>
 <p><img loading="lazy" src="jpg/2015/(101).jpg" width="450" height="300" /> <img loading="lazy" src="jpg/2015/(103).jpg" width="450" height="300" /></p>
 <p><img loading="lazy" src="jpg/2015/(682).jpg" width="450" height="300" /> <img loading="lazy" src="jpg/2015/(683).jpg" width="450" height="300" /></p>
