--- a/2020.html
+++ b/2020.html
@@ -58,7 +58,7 @@ a:hover {
 <p class="style3">&nbsp;&nbsp;&nbsp;</p>
 <p class="style32">&nbsp;</p>
 <div style="position: absolute; width: 1077px; height: 60px; z-index: 3; left: 64px; top: 32px; bottom: 414px;" id="layer6" class="style15">
-  <p><img loading="lazy" src="a.jpg" width="125" height="125" />&nbsp;<span class="style22">仁义礼智信 正大自光明 &nbsp;</span>&nbsp;&nbsp;<span class="STYLE34">2020届6班</span>&nbsp;&nbsp; <a href="桃李天下.html">返回前页</a>&nbsp;&nbsp;
+  <p><img loading="lazy" src="a.jpg" width="125" height="125" />&nbsp;<span class="style22">仁义礼智信 正大自光明 &nbsp;</span>&nbsp;&nbsp;<span class="STYLE34">2020届6班初三</span>&nbsp;&nbsp; <a href="桃李天下.html">返回前页</a>&nbsp;&nbsp;
     <a href="czjszbzrsp.html"></a>&nbsp;&nbsp;&nbsp;</p>
   <p>&nbsp;</p>
 </div>
