--- a/czjszsz.html
+++ b/czjszsz.html
@@ -215,7 +215,7 @@ a:hover {
   </div>
 <p align="center"><a href="《非虚构写作》阅读笔记.htm">《非虚构写作》摘</a></p>
 <p align="center"><span class="STYLE23"><a href="清流/东坡志林摘要.htm">《东坡志林》摘</a><a href="清流/足球，在脚下.htm"></a></span></p>
-<p align="center" class="STYLE35"><a href="https://www.ximalaya.com/album/57580974" target="_blank">傅雷家书 跳读</a> </p>
+<p align="center" class="STYLE35">&nbsp;</p>
 </div>
 <div style="position: absolute; width: 372px; height: 387px; z-index: 5; left: 44px; top: 158px" id="layer2" class="style14">
   <p align="center"><span class="style16">学&nbsp; 理<br />
@@ -235,8 +235,7 @@ a:hover {
     <br />
     <a href="清流/论语微摘.htm">《论语》微摘</a></p>
   <p align="center"><a href="文心雕龙摘录.htm" class="STYLE34">《文心雕龙》摘录</a></p>
-  <p align="center"><a href="https://www.ximalaya.com/jiaoyupeixun/56116556/" target="_blank">（金句朗读 喜马拉雅上）</a></p>
-	<p align="center"><span class="STYLE27"><a href="“我的时间”之分析.htm">“我的时间”之分析</a></span></p>
+  <p align="center"><span class="STYLE27"><a href="“我的时间”之分析.htm">“我的时间”之分析</a></span></p>
 	<p align="center"><a href="力行的德育（深圳中学陈正君）.htm" target="_blank" class="STYLE34">力行的德育</a></p>
 	<p><a href="https://book.douban.com/subject/35430199/"><img src="jpg/工作室/工作室20201027.jpg" width="174" height="242" border="0" /></a> <a href="https://book.douban.com/subject/37285330/"><img src="jpg/工作室/202501.jpg" width="159" height="242" border="0" /></a></p>
 </div>
