--- a/czjszsz.html
+++ b/czjszsz.html
@@ -183,6 +183,8 @@ a:hover {
   <a href="清流/那一年，蓝天上白云朵朵.htm">那一年，蓝天上白云朵朵</a></p>
   <p align="center" class="style18"><a href="清流/你的一面，在我的眼中.htm">你的一面，在我的眼中</a></p>
   <p align="center" class="style18"><span class="STYLE34" style="mso-bidi-font-size: 10.5pt; line-height: 150%; font-family: &quot;simsun&quot;,&quot;serif&quot;; mso-bidi-font-family: 宋体; color: #323E32; mso-font-kerning: 0pt"><a href="理性的田园.htm">理性的田园</a></span></p>
+  <p align="center" class="style18"><a href="清流/文言杂记（2018年2、3月41则）.htm" target="_blank">文言杂记（2018年2、3月41则）</a></p>
+  <p align="center" class="style18"><a href="清流/文言杂记（2018年4、5月50则）.htm" target="_blank">文言杂记（2018年4、5月50则）</a></p>
 </div>
 <div style="position: absolute; width: 274px; height: 669px; z-index: 4; left: 449px; top: 158px" id="layer3" class="style15">
 <p align="center">随&nbsp; 笔<br />
